--- a/elasticsearch-helper-test/pom.xml
+++ b/elasticsearch-helper-test/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>elasticsearch-helper-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency>
+
     </dependencies>
 
 </project>
