--- a/elasticsearch-helper-boot-starter/pom.xml
+++ b/elasticsearch-helper-boot-starter/pom.xml
@@ -6,16 +6,15 @@
     <parent>
         <groupId>io.github.johendeng</groupId>
         <artifactId>elasticsearch-helper</artifactId>
-        <version>1.1.0-RELEASE</version>
+        <version>2.0.0-Es7x-RELEASE</version>
     </parent>
 
     <name>elasticsearch-helper-boot-starter</name>
+    <modelVersion>4.0.0</modelVersion>
     <description>elasticsearch-helper boot starter</description>
 
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper-boot-starter</artifactId>
-    <version>1.1.0-RELEASE</version>
+    <version>2.0.0-Es7x-RELEASE</version>
 
     <licenses>
         <license>
