--- a/elasticsearch-helper-core/pom.xml
+++ b/elasticsearch-helper-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.johendeng</groupId>
         <artifactId>elasticsearch-helper</artifactId>
-        <version>1.1.0-RELEASE</version>
+        <version>2.0.0-Es7x-RELEASE</version>
     </parent>
 
     <name>elasticsearch-helper-core</name>
@@ -13,7 +13,7 @@
 
     <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper-core</artifactId>
-    <version>1.1.0-RELEASE</version>
+    <version>2.0.0-Es7x-RELEASE</version>
     <modelVersion>4.0.0</modelVersion>
 
     <licenses>
