--- a/elasticsearch-helper-lambda/pom.xml
+++ b/elasticsearch-helper-lambda/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.johendeng</groupId>
         <artifactId>elasticsearch-helper</artifactId>
-        <version>1.1.0-RELEASE</version>
+        <version>2.0.0-Es7x-RELEASE</version>
     </parent>
 
     <groupId>org.pippi.elasticsearch.helper</groupId>
