--- a/elasticsearch-helper-model/pom.xml
+++ b/elasticsearch-helper-model/pom.xml
@@ -6,14 +6,14 @@
     <parent>
         <groupId>io.github.johendeng</groupId>
         <artifactId>elasticsearch-helper</artifactId>
-        <version>1.1.0-RELEASE</version>
+        <version>2.0.0-Es7x-RELEASE</version>
     </parent>
 
     <name>elasticsearch-helper-model</name>
     <description>code code</description>
 
     <artifactId>elasticsearch-helper-model</artifactId>
-    <version>1.1.0-RELEASE</version>
+    <version>2.0.0-Es7x-RELEASE</version>
 
     <licenses>
         <license>
