--- a/elasticsearch-helper-sample/pom.xml
+++ b/elasticsearch-helper-sample/pom.xml
@@ -2,32 +2,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>elasticsearch-helper</artifactId>
-        <groupId>io.github.johendeng</groupId>
-        <version>1.1.0-RELEASE</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>io.github.johendeng</groupId>
     <artifactId>elasticsearch-helper-sample</artifactId>
+    <version>2.0.0-Es7x-RELEASE</version>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <spring.boot.version>2.7.14</spring.boot.version>
+        <elasticsearch-helper.version>2.0.0-Es7x-RELEASE</elasticsearch-helper.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.github.johendeng</groupId>
             <artifactId>elasticsearch-helper-boot-starter</artifactId>
+            <version>${elasticsearch-helper.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+        </dependency>
     </dependencies>
 
 </project>
