--- a/elasticsearch-helper-test/pom.xml
+++ b/elasticsearch-helper-test/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>elasticsearch-helper</artifactId>
         <groupId>io.github.johendeng</groupId>
-        <version>1.1.0-RELEASE</version>
+        <version>2.0.0-Es7x-RELEASE</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>elasticsearch-helper-test</artifactId>
-
     <description> 全测试用例 </description>
+    <version>2.0.0-Es7x-RELEASE</version>
+    <modelVersion>4.0.0</modelVersion>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
