--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <name>elasticsearch-helper</name>
     <description>build ElasticSearch-query by Java annotation, simplify code struct</description>
     <url>https://github.com/Johendeng/elasticsearch-helper</url>
-    <version>1.1.0-RELEASE</version>
+    <version>2.0.0-Es7x-RELEASE</version>
 
     <licenses>
         <license>
@@ -32,28 +32,27 @@
         <module>elasticsearch-helper-core</module>
         <module>elasticsearch-helper-model</module>
         <module>elasticsearch-helper-boot-starter</module>
-        <module>elasticsearch-helper-sample</module>
         <module>elasticsearch-helper-test</module>
         <module>elasticsearch-helper-lambda</module>
     </modules>
 
     <properties>
-        <elasticsearch-helper.version>1.1.0-RELEASE</elasticsearch-helper.version>
+        <elasticsearch-helper.version>2.0.0-Es7x-RELEASE</elasticsearch-helper.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <plugin.maven.compiler.version>3.8.1</plugin.maven.compiler.version>
 
-        <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
+        <spring.boot.version>2.7.14</spring.boot.version>
         <elasticsearch.client.version>7.13.3</elasticsearch.client.version>
-        <jackson.core.version>2.13.2</jackson.core.version>
+        <jackson.core.version>2.14.3</jackson.core.version>
         <google.guava.version>30.0-jre</google.guava.version>
         <apache.collections4.version>4.3</apache.collections4.version>
         <apache.common.lang3.version>3.5</apache.common.lang3.version>
         <org.reflections.version>0.9.12</org.reflections.version>
         <slf4j.api.version>1.7.28</slf4j.api.version>
 
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.2</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -149,6 +148,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
